--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
 
 
   
-  var socket = io();
+  var socket = io.connect();
   $('form').submit(function(){
     socket.emit('chat message', $('#m').val());
     $('#m').val('');
