--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@ $(document).ready(function() {
 
   socket.on('music message', function(msg){
     $('#messages').append($('<li>').text(msg));
-    $('#rdio').rdio().play(msg);
+    //$('#rdio').rdio().play(msg);
   });
 
 </script>
