--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <script src="/rdio/swfobject.js"></script>
   <body>
     <div id="rdio"></div>
+    <div id="placeholder"></div>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
@@ -56,7 +57,7 @@ $(document).ready(function() {
     $('#rdio').rdio().play(msg);
   });
 
-$('#rdio').bind('playStateChanged', function (e, playState) {
+$('#placeholder').bind('playStateChanged', function (e, playState) {
   alert("Change State: " + playState);
 });
 
