--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,21 @@
     </form>
 <script>
 
+var socket = io.connect();
+$('form').submit(function(){
+  socket.emit('chat message', $('#m').val());
+  $('#m').val('');
+  return false;
+});
+socket.on('chat message', function(msg){
+  $('#messages').append($('<li>').text(msg));
+});
+
+socket.on('music message', function(msg){
+  $('#messages').append($('<li>').text(msg));
+  $('#rdio').rdio().play(msg);
+});
+
 $(document).ready(function() {
 
   // $(this).scrollTop(0);
@@ -35,13 +50,16 @@ $(document).ready(function() {
 
 
       $('#rdio').bind('playingTrackChanged.rdio', function(e, playingTrack, sourcePosition) {
-        if (playingTrack) {
-          // duration = playingTrack.duration;
-          // $('#art').attr('src', playingTrack.icon);
-          // $('#track').text(playingTrack.name);
-          // $('#album').text(playingTrack.album);
-          // $('#artist').text(playingTrack.artist);
-        alert("Change state");
+        if (playingTrack = 0) {
+          socket.on('music message', function(msg){
+            $('#messages').append($('<li>').text(msg));
+            $('#rdio').rdio().play(msg);
+          });
+        } else {
+          socket.on('music message', function(msg){
+            $('#messages').append($('<li>').text(msg));
+            $('#rdio').rdio().queue(msg);
+          });
         }
         });
 
@@ -53,23 +71,6 @@ $(document).ready(function() {
 
 
 });
-
-
-  
-  var socket = io.connect();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-  });
-
-  socket.on('music message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-    $('#rdio').rdio().play(msg);
-  });
 
 </script>
     
