--- a/public/index.html
+++ b/public/index.html
@@ -35,17 +35,14 @@ socket.on('chat message', function(msg){
   $('#messages').append($('<li>').text(msg));
 });
 
-socket.on('music message', function(msg){
-  $('#messages').append($('<li>').text(msg));
-  $('#rdio').rdio().play(msg);
-});
+// socket.on('music message', function(msg){
+//   $('#messages').append($('<li>').text(msg));
+//   $('#rdio').rdio().play(msg);
+// });
 
 $(document).ready(function() {
 
-  // $(this).scrollTop(0);
-
       $('#rdio').bind('ready.rdio', function() {
-        //$(this).rdio().play('a3354463');
       });
 
 
