--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,12 @@ socket.on('chat message', function(msg){
   $('#messages').append($('<li>').text(msg));
 });
 
-// socket.on('music message', function(msg){
-//   $('#messages').append($('<li>').text(msg));
-//   $('#rdio').rdio().play(msg);
-// });
+$('#rdio').rdio().play("t11592141");
+
+socket.on('music message', function(msg){
+  $('#messages').append($('<li>').text(msg));
+  $('#rdio').rdio().queue(msg);
+});
 
 $(document).ready(function() {
 
@@ -47,22 +49,6 @@ $(document).ready(function() {
 
 
       $('#rdio').bind('playingTrackChanged.rdio', function(e, playingTrack, sourcePosition) {
-        // if (playingTrack = 0) {
-        //   socket.on('music message', function(msg){
-        //     $('#messages').append($('<li>').text(msg));
-        //     $('#rdio').rdio().play(msg);
-        //   });
-        // } else {
-        //   socket.on('music message', function(msg){
-        //     $('#messages').append($('<li>').text(msg));
-        //     $('#rdio').rdio().queue(msg);
-        //   });
-        // }
-
-          socket.on('music message', function(msg){
-            $('#messages').append($('<li>').text(msg));
-            $('#rdio').rdio().play(msg);
-          });
 
         });
 
