--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,30 @@
     </form>
 <script>
 
+var playlist = [];
+
+$(document).ready(function() {
+
+      $('#rdio').bind('ready.rdio', function() {
+      //$('#rdio').rdio().play("t11592141");
+      });
+
+
+      $('#rdio').bind('playingTrackChanged.rdio', function(e, playingTrack, sourcePosition) {
+
+
+
+      });
+
+//LOCAL
+  //$('#rdio').rdio('GAlNi78J_____zlyYWs5ZG02N2pkaHlhcWsyOWJtYjkyN2xvY2FsaG9zdEbwl7EHvbylWSWFWYMZwfc=');
+ 
+//HEROKU
+  $('#rdio').rdio('GB9Ug2P______2R2cHlzNHd5ZXg3Z2M0OXdoaDY3aHdrbnNsZWVweS1lYXJ0aC0yODQ0Lmhlcm9rdWFwcC5jb21ifAjbDmsn12JyvPU0Bb2n');
+
+
+});
+
 var socket = io.connect();
 $('form').submit(function(){
   socket.emit('chat message', $('#m').val());
@@ -35,30 +59,12 @@ socket.on('chat message', function(msg){
   $('#messages').append($('<li>').text(msg));
 });
 
-$('#rdio').rdio().play("t11592141");
-
-socket.on('music message', function(msg){
-  $('#messages').append($('<li>').text(msg));
-  $('#rdio').rdio().queue(msg);
-});
-
-$(document).ready(function() {
-
-      $('#rdio').bind('ready.rdio', function() {
-      });
-
-
-      $('#rdio').bind('playingTrackChanged.rdio', function(e, playingTrack, sourcePosition) {
-
-        });
-
-//LOCAL
-  //$('#rdio').rdio('GAlNi78J_____zlyYWs5ZG02N2pkaHlhcWsyOWJtYjkyN2xvY2FsaG9zdEbwl7EHvbylWSWFWYMZwfc=');
- 
-//HEROKU
-  $('#rdio').rdio('GB9Ug2P______2R2cHlzNHd5ZXg3Z2M0OXdoaDY3aHdrbnNsZWVweS1lYXJ0aC0yODQ0Lmhlcm9rdWFwcC5jb21ifAjbDmsn12JyvPU0Bb2n');
-
-
+socket.on('music message', function(key, song, artist){
+  $('#messages').append($('<li>').text(key));
+  $('#messages').append($('<li>').text(song));
+  $('#messages').append($('<li>').text(artist));
+  $('#rdio').rdio().queue(key);
+  //$('#rdio').rdio().play(msg);
 });
 
 </script>
