--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@ var playlist = [];
 $(document).ready(function() {
 
       $('#rdio').bind('ready.rdio', function() {
-      //$('#rdio').rdio().play("t11592141");
+      $('#rdio').rdio().play("t11592141");
       });
 
 
