--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@ socket.on('music message', function(key, song, artist){
   $('#messages').append($('<li>').text(song));
   $('#messages').append($('<li>').text(artist));
   //$('#rdio').rdio().queue(key);
-  $('#rdio').rdio().play(msg);
+  $('#rdio').rdio().play(key);
 });
 
 </script>
